--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   intl: any
   table_calendar: ^3.0.9
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
