--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   table_calendar: ^3.0.9
   dotted_line: ^3.2.2
   http: ^1.2.1
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.3
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
